--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "core-js": "^3.2.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
